Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,7 @@ fieldset {
         align-items: center;
         justify-content: center;
         text-align: center;
-        padding: 10px 0;
+        padding: 5px 0;
         width: 100%;
     }
     #profilepic {
